projects/product-recommendations/k8s/service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-recommendations
  labels:
    app: product-recommendations
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: product-recommendations
